[project]
name = "psp-relay"
version = "0.1.0"
description = "Library with functions related to specfic relay types."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psp-plotting",
    "shapely>=2.1.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]

[tool.uv.sources]
psp-plotting = { git = "https://github.com/U-RxI/psp-plotting" }
